# elwood-pipeline

./: pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docker/: Dockerfile
elwood_pipeline/: __init__.py  __main__.py  config.py  db.py  elwood_outliers.py  maintain_data_feed.py  s3.py  sql_util.py  state_management.py
elwood_pipeline/sql/: pull_aq_units.sql
