[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elwood-pipeline"
version = "0.1.0"
description = "Elwood air-quality outlier detection pipelines. Prefect-agnostic."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.26",
    "elwood-spatial>=0.1.1",
    "geopandas>=0.13",
    "libpysal>=4.10",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "pyarrow>=15.0",
    "pyproj>=3.6",
    "python-dotenv>=1.0",
    "shapely>=2.0",
    "SQLAlchemy>=2.0",
]

[project.scripts]
elwood-pipeline = "elwood_pipeline.__main__:main"

[tool.setuptools.packages.find]
include = ["elwood_pipeline*"]

[tool.setuptools.package-data]
elwood_pipeline = ["sql/*.sql"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
